--- a/files/pages/template.html
+++ b/files/pages/template.html
@@ -22,11 +22,11 @@
     <div id="container">
         <div id="top">
 
-            <a href="/index.html" id="logo"></a>
+            <a href="https://cant.hu/" id="logo"></a>
             <span id="otherPages">
-                <a title="A csapatról és mentorainkról" href="/about.html">Rólunk</a>
-                <a title="A cansatünkről" href="/cansat.html">CanSat</a>
-                <a title="Élőben a cansat adatai" href="/live.html">Live</a>
+                <a title="A csapatról és mentorainkról" href="https://cant.hu/about.html">Rólunk</a>
+                <a title="A cansatünkről" href="https://cant.hu/cansat.html">CanSat</a>
+                <a title="Élőben a cansat adatai" href="/">Live</a>
             </span>
 
             <a href="https://github.com/cant-sat" id="githubLogo">
