--- a/files/pages/live.html
+++ b/files/pages/live.html
@@ -57,7 +57,7 @@
         // document.getElementById("url").disabled = true
         document.getElementById("connect").disabled = true
 
-        const url = "ws://server.cant.hu:443"
+        const url = "ws://192.168.0.211:12345"
 
 
         socket = new WebSocket(url)
